--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
       </div>
     </section>
 
-    <!-- Services Section -->
+    <!-- Service Section -->
     <section id="services">
       <div class="section-container">
         <h2 class="section-title">Our Services</h2>
