added service section

--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
             <i class="fas fa-arrow-right"></i>
           </a>
           <a href="#portfolio" class="btn btn-secondary">
-            View Our Work
+            View Our Services 
             <i class="fas fa-eye"></i>
           </a>
         </div>
@@ -964,10 +964,10 @@
       </div>
     </section>
 
-    <!-- Portfolio Section -->
+    <!-- our services-->
     <section class="portfolio" id="portfolio">
       <div class="section-container">
-        <h2 class="section-title">Our Portfolio</h2>
+        <h2 class="section-title">Our Services</h2>
         <p class="section-description">
           Explore our recent projects and see how we've helped businesses like
           yours succeed.
@@ -981,7 +981,7 @@
               class="portfolio-img"
             />
             <div class="portfolio-overlay">
-              <span class="portfolio-category">Web Design</span>
+              <span class="portfolio-category">Healthcare</span>
               <h3 class="portfolio-title">Eco Brand Website</h3>
               <p>
                 Full branding and website for a boutique eco brand with
@@ -1001,7 +1001,67 @@
               class="portfolio-img"
             />
             <div class="portfolio-overlay">
-              <span class="portfolio-category">Development</span>
+              <span class="portfolio-category">Water Testing</span>
+              <h3 class="portfolio-title">Custom WordPress Site</h3>
+              <p>
+                Custom WordPress development with blog and shop integration for
+                a sustainable brand.
+              </p>
+              <a href="#" class="portfolio-link">
+                View Project
+                <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="portfolio-item" data-aos="fade-up" data-aos-delay="200">
+            <img
+              src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+              alt="WordPress Development"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <span class="portfolio-category">Engineering Equipement</span>
+              <h3 class="portfolio-title">Custom WordPress Site</h3>
+              <p>
+                Custom WordPress development with blog and shop integration for
+                a sustainable brand.
+              </p>
+              <a href="#" class="portfolio-link">
+                View Project
+                <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="portfolio-item" data-aos="fade-up" data-aos-delay="200">
+            <img
+              src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+              alt="WordPress Development"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <span class="portfolio-category">Laboratory Equpipment</span>
+              <h3 class="portfolio-title">Custom WordPress Site</h3>
+              <p>
+                Custom WordPress development with blog and shop integration for
+                a sustainable brand.
+              </p>
+              <a href="#" class="portfolio-link">
+                View Project
+                <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="portfolio-item" data-aos="fade-up" data-aos-delay="200">
+            <img
+              src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+              alt="WordPress Development"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <span class="portfolio-category">lab furniture</span>
               <h3 class="portfolio-title">Custom WordPress Site</h3>
               <p>
                 Custom WordPress development with blog and shop integration for
@@ -1021,7 +1081,7 @@
               class="portfolio-img"
             />
             <div class="portfolio-overlay">
-              <span class="portfolio-category">Marketing</span>
+              <span class="portfolio-category">Analytical Equipment</span>
               <h3 class="portfolio-title">Wellness Coach Landing Page</h3>
               <p>
                 High-converting landing page and lead capture system for a
