--- a/index.html
+++ b/index.html
@@ -164,10 +164,47 @@
         align-items: center;
         min-height: 100vh;
         padding: 6rem 2rem 4rem;
-        background: linear-gradient(135deg, var(--accent-light), var(--white));
         text-align: center;
         position: relative;
         overflow: hidden;
+      }
+
+      .hero {
+        position: relative;
+        overflow: hidden;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+
+      .hero-bg-slider {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+      }
+
+      .hero-bg-slider .slide {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+      }
+
+      .hero-bg-slider .slide.active {
+        opacity: 1;
+      }
+
+      .hero-content {
+        position: relative;
+        z-index: 1;
       }
 
       .hero::before {
@@ -199,17 +236,17 @@
 
       .hero-content {
         position: relative;
-        z-index: 1;
+        z-index: 2;
         max-width: 800px;
       }
 
       .hero h2 {
         font-size: clamp(2.5rem, 5vw, 4rem);
-        font-weight: 700;
+        font-weight: 600;
         margin-bottom: 1.5rem;
         line-height: 1.2;
-        color: var(--text);
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        color: #ffffff;
+        text-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
         animation: fadeInUp 1s ease-out both;
       }
 
@@ -318,6 +355,37 @@
         }
         50% {
           transform: translateY(-20px) translateX(20px);
+        }
+      }
+      .hero-bg-images {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: 0; /* below hero-content */
+        pointer-events: none;
+      }
+
+      .hero-bg-images .bg-img {
+        position: absolute;
+        width: 250px;
+        height: 250px;
+        object-fit: cover;
+        border-radius: 1rem;
+        opacity: 0.12;
+        transform: scale(1);
+        transition: none;
+      }
+
+      @keyframes zoomInOut {
+        0%,
+        100% {
+          transform: scale(1);
+        }
+        50% {
+          transform: scale(1.1);
         }
       }
 
@@ -842,7 +910,7 @@
       }
 
       .logo-img {
-        height: 100px; /* Adjust based on your needs */
+        height: 80px; /* Adjust based on your needs */
         width: auto; /* Maintain aspect ratio */
         transition: var(--transition);
       }
@@ -859,11 +927,7 @@
     <header id="header">
       <div class="nav-container">
         <a href="#" class="logo">
-          <img
-            src="images/logo.png"
-            alt="Company Logo"
-            class="logo-img"
-          />
+          <img src="images/logo.png" alt="Company Logo" class="logo-img" />
         </a>
 
         <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -881,26 +945,38 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-      <div class="hero-shapes">
-        <div class="shape shape-1"></div>
-        <div class="shape shape-2"></div>
-        <div class="shape shape-3"></div>
+      <div class="hero-bg-slider">
+        <div
+          class="slide active"
+          style="background-image: url('images/image1.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('images/image2.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('images/image3.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('images/image4.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('images/image5.jpg')"
+        ></div>
       </div>
 
       <div class="hero-content">
-        <h2>Eco-Friendly Design That Stands Out</h2>
-        <p>
-          Crafting websites with modern aesthetics and performance while
-          reflecting a green and clean brand image.
-        </p>
+        <h2>Precision Lab Equipment & Professional Lab Services</h2>
+
         <div class="hero-buttons">
           <a href="#contact" class="btn btn-primary">
-            Get a Free Quote
-            <i class="fas fa-arrow-right"></i>
+            Get a Free Quote <i class="fas fa-arrow-right"></i>
           </a>
           <a href="#portfolio" class="btn btn-secondary">
-            View Our Services 
-            <i class="fas fa-eye"></i>
+            View Our Services <i class="fas fa-eye"></i>
           </a>
         </div>
       </div>
@@ -1244,6 +1320,20 @@
     </div>
 
     <!-- Scripts -->
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const slides = document.querySelectorAll(".hero-bg-slider .slide");
+        let current = 0;
+
+        setInterval(() => {
+          slides[current].classList.remove("active");
+          current = (current + 1) % slides.length;
+          slides[current].classList.add("active");
+        }, 5000); // Change slide every 5 seconds
+      });
+    </script>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       // Initialize AOS (Animate On Scroll)
