--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
         opacity: 1;
       }
 
+      .hero-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.4); /* Darken level */
+        z-index: 1;
+      }
+
       .hero-content {
         position: relative;
         z-index: 1;
@@ -967,6 +977,8 @@
           style="background-image: url('images/image5.jpg')"
         ></div>
       </div>
+
+      <div class="hero-overlay"></div>
 
       <div class="hero-content">
         <h2>Precision Lab Equipment & Professional Lab Services</h2>
