--- a/index.html
+++ b/index.html
@@ -163,20 +163,11 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        padding: 6rem 2rem 4rem;
+        padding: 6rem 2rem 0rem !important;
+        margin-bottom: 0 !important;
         text-align: center;
         position: relative;
         overflow: hidden;
-      }
-
-      .hero {
-        position: relative;
-        overflow: hidden;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
       }
 
       .hero-bg-slider {
@@ -208,12 +199,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.4); /* Darken level */
-        z-index: 1;
-      }
-
-      .hero-content {
-        position: relative;
+        background: rgba(0, 0, 0, 0.4);
         z-index: 1;
       }
 
@@ -248,6 +234,8 @@
         position: relative;
         z-index: 2;
         max-width: 800px;
+        padding: 0 !important;
+        margin: 0 !important;
       }
 
       .hero h2 {
@@ -367,6 +355,7 @@
           transform: translateY(-20px) translateX(20px);
         }
       }
+
       .hero-bg-images {
         position: absolute;
         top: 0;
@@ -374,7 +363,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        z-index: 0; /* below hero-content */
+        z-index: 0;
         pointer-events: none;
       }
 
@@ -399,10 +388,11 @@
         }
       }
 
-      /* Sections */
+      /* Section Base Styles */
       section {
-        padding: 6rem 2rem;
         position: relative;
+        padding: 4rem 2rem;
+        margin: 0;
       }
 
       .section-container {
@@ -413,7 +403,7 @@
       .section-title {
         font-size: clamp(1.75rem, 3vw, 2.5rem);
         text-align: center;
-        margin-bottom: 3.5rem;
+        margin-bottom: 2rem;
         color: var(--primary);
         position: relative;
         display: inline-block;
@@ -439,6 +429,97 @@
         margin: 0 auto 4rem;
         color: var(--text-light);
         font-size: 1.1rem;
+      }
+
+      section + .solutions-marquee {
+        margin-top: 0 !important;
+        padding-top: 0 !important;
+      }
+
+      /* Marquee Section */
+      .solutions-marquee {
+        background: linear-gradient(
+          145deg,
+          var(--primary),
+          var(--primary-dark)
+        );
+        display: block;
+        margin: 0 !important;
+        padding-top: 0.5rem !important;
+        padding-bottom: 2rem;
+        overflow: hidden;
+        position: relative;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
+
+      .marquee-container {
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+      }
+
+      .marquee-track {
+        display: flex;
+        width: max-content;
+        animation: scroll 30s linear infinite;
+      }
+
+      .marquee-item {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        padding: 0 2rem;
+        color: var(--white);
+        font-weight: 500;
+        font-size: 1.1rem;
+        white-space: nowrap;
+        border-right: 1px solid rgba(255, 255, 255, 0.2);
+        transition: all 0.3s ease;
+      }
+
+      .marquee-item i {
+        font-size: 1.5rem;
+        color: var(--accent-light);
+      }
+
+      .marquee-item:hover {
+        transform: scale(1.05);
+        color: var(--accent-light);
+      }
+
+      .marquee-item:hover i {
+        color: var(--white);
+      }
+
+      @keyframes scroll {
+        0% {
+          transform: translateX(0);
+        }
+        100% {
+          transform: translateX(-50%);
+        }
+      }
+
+      .marquee-container:hover .marquee-track {
+        animation-play-state: paused;
+      }
+
+      /* Responsive */
+      @media (max-width: 768px) {
+        .marquee-item {
+          padding: 0 1.5rem;
+          font-size: 1rem;
+        }
+        .marquee-item i {
+          font-size: 1.2rem;
+        }
+      }
+
+      @media (max-width: 576px) {
+        .marquee-item {
+          padding: 0 1rem;
+          font-size: 0.9rem;
+        }
       }
 
       /* Services */
@@ -990,6 +1071,73 @@
           <a href="#portfolio" class="btn btn-secondary">
             View Our Services <i class="fas fa-eye"></i>
           </a>
+        </div>
+      </div>
+    </section>
+
+  
+
+    <!-- Solutions Marquee -->
+    <section class="solutions-marquee">
+      <div class="marquee-container">
+        <div class="marquee-track">
+          <div class="marquee-item">
+            <i class="fas fa-microscope"></i>
+            <span>Microscopy Solutions</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-vial"></i>
+            <span>Analytical Chemistry</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-dna"></i>
+            <span>Molecular Biology</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-temperature-low"></i>
+            <span>Climate Control Systems</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-prescription-bottle-alt"></i>
+            <span>Lab Automation</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-flask"></i>
+            <span>Research Equipment</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-shield-virus"></i>
+            <span>Biosafety Solutions</span>
+          </div>
+          <!-- Duplicate items for seamless looping -->
+          <div class="marquee-item">
+            <i class="fas fa-microscope"></i>
+            <span>Microscopy Solutions</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-vial"></i>
+            <span>Analytical Chemistry</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-dna"></i>
+            <span>Molecular Biology</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-temperature-low"></i>
+            <span>Climate Control Systems</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-prescription-bottle-alt"></i>
+            <span>Lab Automation</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-flask"></i>
+            <span>Research Equipment</span>
+          </div>
+          <div class="marquee-item">
+            <i class="fas fa-shield-virus"></i>
+            <span>Biosafety Solutions</span>
+          </div>
         </div>
       </div>
     </section>
