--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <style>
       :root {
-        --primary: #328e6e;
+        --primary: #52357B ;
         --primary-dark: #1a6e52;
         --secondary: #67ae6e;
         --accent: #90c67c;
@@ -297,7 +297,7 @@
       }
 
       .btn-secondary:hover {
-        background: var(--primary);
+        background: var(--primary-dark);
         color: var(--white);
         transform: translateY(-2px);
       }
@@ -431,16 +431,13 @@
         font-size: 1.1rem;
       }
 
-      section + .solutions-marquee {
-        margin-top: 0 !important;
-        padding-top: 0 !important;
-      }
+      
 
       /* Marquee Section */
       .solutions-marquee {
         background: linear-gradient(
           145deg,
-          var(--primary),
+          var(--secondary),
           var(--primary-dark)
         );
         display: block;
@@ -465,10 +462,11 @@
       }
 
       .marquee-item {
+        
         display: flex;
         align-items: center;
         gap: 1rem;
-        padding: 0 2rem;
+        padding: 2rem 2rem;
         color: var(--white);
         font-weight: 500;
         font-size: 1.1rem;
