--- a/index.html
+++ b/index.html
@@ -1428,17 +1428,24 @@
           <h3>Services</h3>
           <ul class="footer-links">
             <li>
-              <a href="#"><i class="fas fa-chevron-right"></i> Web Design</a>
+              <a href="#"><i class="fas fa-chevron-right"></i> Microscopy Solutions</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-chevron-right"></i> SEO Strategy</a>
+              <a href="#"><i class="fas fa-chevron-right"></i> Analytical Chemistry</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-chevron-right"></i> Maintenance</a>
+              <a href="#"><i class="fas fa-chevron-right"></i> Molecular Biology</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-chevron-right"></i> Branding</a>
+              <a href="#"><i class="fas fa-chevron-right"></i> Lab Automation</a>
             </li>
+            <li>
+              <a href="#"><i class="fas fa-chevron-right"></i> Research Equipment</a>
+            </li>
+            <li>
+              <a href="#"><i class="fas fa-chevron-right"></i> Microscopy Solutions</a>
+            </li>
+            
           </ul>
         </div>
 
