--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         -webkit-backdrop-filter: blur(10px);
         transform: translateY(0);
         transition: var(--transition);
+        height: 110px;
       }
 
       header.scrolled {
@@ -162,7 +163,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
+        min-height: 90vh;
         padding: 6rem 2rem 0rem !important;
         margin-bottom: 0 !important;
         text-align: center;
@@ -440,8 +441,8 @@
         );
         display: block;
         margin: 0 !important;
-        padding-top: 0.2rem !important;
-        padding-bottom: 0.2rem;
+        padding-top: 0.1rem !important;
+        padding-bottom: 0.1rem;
         overflow: hidden;
         position: relative;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -998,9 +999,10 @@
       }
 
       .logo-img {
-        height: 80px; /* Adjust based on your needs */
+        height: 120px; /* Adjust based on your needs */
         width: auto; /* Maintain aspect ratio */
         transition: var(--transition);
+        margin-top: -20px !important;
       }
 
       /* Optional: Add hover effect */
