fixed marque mob veiw

--- a/index.html
+++ b/index.html
@@ -539,6 +539,20 @@
         animation-play-state: paused;
       }
 
+      @media (max-width: 768px) {
+        .solutions-marquee {
+          padding-top: 1rem !important;
+          padding-bottom: 1rem;
+        }
+      }
+
+      @media (max-width: 576px) {
+        .solutions-marquee {
+          padding-top: 2.1rem !important;
+          padding-bottom: 1.2rem;
+        }
+      }
+
       /* Responsive */
       @media (max-width: 768px) {
         .marquee-item {
