--- a/index.html
+++ b/index.html
@@ -2144,7 +2144,7 @@
     <footer>
       <div class="footer-container">
         <div class="footer-col">
-          <h3>GreenSite</h3>
+          <h3>BN Inventions</h3>
           <p>
             Creating sustainable digital experiences that help businesses grow
             while minimizing environmental impact.
