footer service adj

--- a/index.html
+++ b/index.html
@@ -2186,32 +2186,32 @@
           <ul class="footer-links">
             <li>
               <a href="#"
-                ><i class="fas fa-chevron-right"></i> Microscopy Solutions</a
+                ><i class="fas fa-chevron-right"></i> General Laboratory Equipment</a
               >
             </li>
             <li>
               <a href="#"
-                ><i class="fas fa-chevron-right"></i> Analytical Chemistry</a
+                ><i class="fas fa-chevron-right"></i> Analytical Instruments</a
               >
             </li>
             <li>
               <a href="#"
-                ><i class="fas fa-chevron-right"></i> Molecular Biology</a
+                ><i class="fas fa-chevron-right"></i> Life Sciences & Biotechnology Instruments</a
               >
             </li>
             <li>
               <a href="#"
-                ><i class="fas fa-chevron-right"></i> Lab Automation</a
+                ><i class="fas fa-chevron-right"></i> Material Testing & Physical Properties Instruments</a
               >
             </li>
             <li>
               <a href="#"
-                ><i class="fas fa-chevron-right"></i> Research Equipment</a
+                ><i class="fas fa-chevron-right"></i> Environmental & Industrial Testing Instruments</a
               >
             </li>
             <li>
               <a href="#"
-                ><i class="fas fa-chevron-right"></i> Microscopy Solutions</a
+                ><i class="fas fa-chevron-right"></i> Sample Preparation Instruments</a
               >
             </li>
           </ul>
