--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,8 @@
               <li><a href="#analytical">Analytical Instruments</a></li>
               <li><a href="#medical">Medical Devices</a></li>
               <li><a href="#pharma">Pharmaceutical Tools</a></li>
-              <li><a href="#testing">Testing Equipment</a></li>
+              <li><a href="#testing">Petroleum Equipment</a></li>
+               <li><a href="#testing">Testing Equipment</a></li>
             </ul>
           </li>
           <li><a href="#portfolio">Portfolio</a></li>
