--- a/index.html
+++ b/index.html
@@ -1101,12 +1101,12 @@
           <li class="has-dropdown">
             <a href="#services">Services</a>
             <ul class="dropdown">
-              <li><a href="#laboratory">Laboratory Equipment</a></li>
-              <li><a href="#analytical">Analytical Instruments</a></li>
-              <li><a href="#medical">Medical Devices</a></li>
-              <li><a href="#pharma">Pharmaceutical Tools</a></li>
-              <li><a href="#testing">Petroleum Equipment</a></li>
-               <li><a href="#testing">Testing Equipment</a></li>
+              <li><a href="Laboratory.html">Laboratory Equipment</a></li>
+              <li><a href="Analytical.html">Analytical Instruments</a></li>
+              <li><a href="Medical.html">Medical Devices</a></li>
+              <li><a href="Pharmaceutical.html">Pharmaceutical Tools</a></li>
+              <li><a href="Petroleum.html">Petroleum Equipment</a></li>
+               <li><a href="Testing.html">Testing Equipment</a></li>
             </ul>
           </li>
           <li><a href="#portfolio">Portfolio</a></li>
